# rules_ruby_simple

./: .gitignore  WORKSPACE  repositories.bzl  setup.bzl
examples/simple/: .bazelrc  BUILD.bazel  WORKSPACE  bazel-simple  hello.rb
examples/simple/lib/: greeter.rb
ruby/: defs.bzl
ruby/private/: BUILD.bazel  binary_launcher.txt  providers.bzl  ruby_binary.bzl  ruby_library.bzl  system_toolchain.bzl  toolchain.bzl  utils.bzl
